--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
 
         </div>
     </center>
-    <div class="warning">
+<!--     <div class="warning">
         <span>联系WeChat: Joy_Lucky-Luna&nbsp;</span>
         <span>联系邮箱: 1061979303@qq.com</span>
         <div>本站借鉴参考https://www.csdn.net/,仅用于学习交流</div>
@@ -41,7 +41,7 @@
         <a href="https://blog.csdn.net/m0_66492535/article/details/127722169">
             <div>https://blog.csdn.net/m0_66492535/article/details/127722169</div>
         </a>
-    </div>
+    </div> -->
 
 </body>
 
